edition = "2023";
package proto;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;

message ProtoTestObject {
  int64 value = 1;
}
